--- a/base/splash.html
+++ b/base/splash.html
@@ -7,9 +7,8 @@
     <link href="style/common.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="background"></div>
-    <div class="contentWrapper">
-      wew
+    <div class="versionTag">
+      V1.0.0 ALPHA
     </div>
   </body>
 </html>
