--- a/base/splash.html
+++ b/base/splash.html
@@ -5,6 +5,7 @@
     <title>Luminosity</title>
     <link href="style/splash.css" type="text/css" rel="stylesheet">
     <link href="style/common.css" type="text/css" rel="stylesheet">
+    <script src="../scripts/runtime.js"></script> 
   </head>
   <body>
     <div class="versionTag">
