finalized window controls

--- a/base/main.html
+++ b/base/main.html
@@ -5,12 +5,17 @@
         <title>Luminosity</title>
         <link href="style/main.css" type="text/css" rel="stylesheet">
         <link href="style/common.css" type="text/css" rel="stylesheet">
+        <script src="../scripts/winctrl.js"></script>
+        <script src="../scripts/renderer.js"></script>
     </head>
     <body>
         <div class="navagation">
             <div class="navagation-logo">
                 LUMINOSITY
             </div>
+            <img class="navagation-windowcontrol" id="minimize" src="../images/winctrl/min.png">
+            <img class="navagation-windowcontrol" id="maximize" src="../images/winctrl/max.png">
+            <img class="navagation-windowcontrol" id="close" src="../images/winctrl/close.png">
         </div>
     </body>
 </html>
